# dapr-test

./: .gitignore  README.md  kind-cluster.yaml
micro-one/: Dockerfile  pyproject.toml
micro-one/deploy/: deployment-dev.yaml  deployment.yaml  service.yaml
micro-one/src/: __init__.py  main.py
micro-one/src/services/: message_service.py
micro-one/tests/: test_main.py
micro-two/: Dockerfile  pyproject.toml
micro-two/deploy/: dapr-component.yaml  deployment-dev.yaml  deployment.yaml  service.yaml
micro-two/src/: __init__.py  main.py
micro-two/src/services/: message_processor.py
micro-two/tests/: test_main.py
scripts/: build-images.sh  cleanup.sh  deploy-dev.sh  deploy-k8s.sh  dev-setup.sh  dev-workflow.sh  generate-kind-config.sh  run-dev.sh  run-local.sh
